tests/fixtures/invalid/empty_purpose.ko
// ERROR E0211
module empty_purpose {
    meta {
        purpose: "",
        version: "0.1.0"
    }

    fn main() {
    }
}
